--- a/web/src/style/main.less
+++ b/web/src/style/main.less
@@ -8,7 +8,8 @@
 main {
   .animate();
   .light-theme(@brand-color, #F9F9F9);
-  
+  --theme-radius-medium: 8px;
+  --theme-radius-large: 14px;
 }
 
 main.main--dark {
